--- a/build.gradle
+++ b/build.gradle
@@ -46,9 +46,9 @@ jacocoTestReport {
 sonarqube {
 	properties {
 		property "sonar.host.url", "https://sonarcloud.io"
-		property "sonar.projectName", "LogBookAppRg"
-		property 'sonar.login','e889bc37f969ad6172cf2793c168d3910f128be0'
-		property "sonar.organization", "rgaete-github"
+		property "sonar.projectName", "LogBookAppPq"
+		property 'sonar.login','4551f72d1f54104a9542088266f9c9bb648ae04c'
+		property "sonar.organization", "cursoagilidad"
 		property "sonar.java.source", "8"
 		property "sonar.issuesReport.html.enable", "true"
 		property "sonar.scm.disabled", "true"
